--- a/ConsoleGraphics/ConsoleGraphics.csproj
+++ b/ConsoleGraphics/ConsoleGraphics.csproj
@@ -46,17 +46,20 @@
     <Compile Include="Events\DrawEvent.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Events\EventManager.cs" />
-    <Compile Include="Events\ScheduledEvent.cs" />
+    <Compile Include="Events\UIDrawEvent.cs" />
     <Compile Include="Events\UpdateEvent.cs" />
-    <Compile Include="Events\UserDrawEvent.cs" />
-    <Compile Include="Events\UserUpdateEvent.cs" />
+    <Compile Include="Game\Level.cs" />
     <Compile Include="Game\GameObject.cs" />
     <Compile Include="Game\Space.cs" />
+    <Compile Include="Game\UIObject.cs" />
+    <Compile Include="Game\UI\Style.cs" />
+    <Compile Include="Game\UI\Window.cs" />
     <Compile Include="Graphics\Camera.cs" />
     <Compile Include="Graphics\ConIONative.cs" />
     <Compile Include="Graphics\Renderer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\ANSI.cs" />
     <Compile Include="Util\Keyboard.cs" />
     <Compile Include="Util\Mouse.cs" />
     <Compile Include="Util\Vector2.cs" />
